<resources>
    <string name="app_name">FreakingMath</string>
    <string name="game_name">FREAKING MATH</string>
    <string name="best_score" formatted="false">BEST SCORE %1$s</string>
    <string name="best" formatted="false">BEST: %1$s</string>
    <string name="score" formatted="false">SCORE: %1$s</string>
    <string name="play">PLAY</string>
    <string name="more">MORE</string>
    <string name="game_over">GAME OVER</string>
    <string name="your_score" formatted="false">YOUR SCORE\n %1$s</string>
    <string name="try_again">TRY AGAIN?</string>
    <string name="home">HOME</string>

</resources>