<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/color_black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/game_over"
        android:textColor="@color/color_dark_red"
        android:textSize="@dimen/text_size_50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_your_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_80dp"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="@dimen/width_260dp"
        android:layout_height="@dimen/btn_height_80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_100dp"
        android:background="@drawable/btn_red"
        android:text="@string/try_again"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="@dimen/width_260dp"
        android:layout_height="@dimen/btn_height_80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_green"
        android:text="@string/home"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_40sp"
        android:textStyle="bold" />
</LinearLayout>